fix: fix Home display overflow

--- a/src/components/Topic/TopicReply.scss
+++ b/src/components/Topic/TopicReply.scss
@@ -1,6 +1,7 @@
 .container {
   background: white;
   margin-top: 24px;
+  max-width: 100%;
   width: 1000px;
   padding: 0 24px;
 }
