--- a/src/layouts/BasicLayout.scss
+++ b/src/layouts/BasicLayout.scss
@@ -1,5 +1,6 @@
 .container {
   min-height: 100vh;
+  max-width: 100%;
 }
 
 .header {
