--- a/src/routes/Topic/index.scss
+++ b/src/routes/Topic/index.scss
@@ -1,4 +1,5 @@
 .container {
+  max-width: 100%;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
